clusters/9ka/cert-manager/cnp-cainjector.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: cainjector
      app.kubernetes.io/instance: cert-manager
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
