clusters/9ka/cert-manager/cnp-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-controller
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: cert-manager
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toFQDNs:
    - matchName: acme-v02.api.letsencrypt.org
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
