clusters/9ka/cert-manager/cnp-webhook.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
      - ports:
        - port: "6080"
          protocol: TCP
        - port: https
          protocol: TCP
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
